[package]
name = "crabmole"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0 OR BSD-3-Clause"
description = "Porting Go standard library in Rust"
documentation = "https://docs.rs/crabmole/"
homepage = "https://github.com/al8n/crabmole"
repository = "https://github.com/al8n/crabmole"
keywords = ["base32", "base64", "pipe", "sort"]
categories = ["development-tools", "no-std", "encoding"]

[workspace]
members = [".", "derive"]

[features]
default = ["std", "derive"]
derive = ["crabmole-derive"]
full = ["encoding", "io", "async-io", "std", "sort"]
std = ["alloc"]
alloc = []

sort = []

# encoding related features
encoding = ["ascii85", "base32", "base64", "binary", "hex"]
ascii85 = []
base32 = []
base58 = []
base64 = []
binary = []
hex = []

# io related features
io = ["std", "pipe"]
async-io = ["std", "async-pipe"]
pipe = ["std", "crossbeam-channel", "parking_lot"]
async-pipe = ["std", "async-channel", "futures-util/io", "async-lock"]


[dependencies]
async-channel = { version = "1.7", optional = true }
async-lock = { version = "2.6", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
crabmole-derive = { version = "0.1", path = "./derive", optional = true }
futures-util = { version = "0.3", optional = true }
parking_lot = { version = "0.12", optional = true }
pollster = { version = "0.2", optional = true }

[dev-dependencies]
rand = "0.8"
tokio = { version = "1.22", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

